[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pathprofiler"
version = "0.1.0"
description = "Python library that profile a directory and returns a description of the content of a directory."
readme = "README.rst"
authors = [
  {name = "Dr Saad Laouadi", email = "dr.saad.laouadi@gmail.com"}
]
maintainers = [
  {name = "Dr Saad Laouadi", email = "dr.saad.laouadi@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/dr-saad-la/pathprofiler/issues"
changelog = "https://github.com/dr-saad-la/pathprofiler/blob/master/changelog.md"
homepage = "https://github.com/dr-saad-la/pathprofiler"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

